aws-setup/ui-setup/cloud-formation/athenz-ui-aws-resource-setup.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'Athenz UI standard 2 Availabilty zone configuration template'
Parameters:
  UIServiceName:
    Type: String
    Description: The service name for UI server
    Default: "ui"
  UIVPCCidrBlock:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "must be an IP address block in Cidr notation."
    MaxLength: "18"
    MinLength: "9"
    Type: String
    Description: The CIDR block to use for the UI VPC.
    Default: "10.0.0.0/20"
  PrivateSubnet01CidrBlock:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "must be an IP address block in Cidr notation."
    MaxLength: "18"
    MinLength: "9"
    Type: String
    Description: The CIDR block to use for the Private subnet Zone 1.
    Default: "10.0.0.0/22"
  PrivateSubnet02CidrBlock:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "must be an IP address block in Cidr notation."
    MaxLength: "18"
    MinLength: "9"
    Type: String
    Description: The CIDR block to use for the Private subnet Zone 2.
    Default: "10.0.4.0/22"
  PublicSubnet01CidrBlock:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "must be an IP address block in Cidr notation."
    MaxLength: "18"
    MinLength: "9"
    Type: String
    Description: The CIDR block to use for Public subnet Zone 1.
    Default: "10.0.8.0/22"
  PublicSubnet02CidrBlock:
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: "must be an IP address block in Cidr notation."
    MaxLength: "18"
    MinLength: "9"
    Type: String
    Description: The CIDR block to use for Public subnet Zone 2.
    Default: "10.0.12.0/22"
  GroupName:
    Type: String
    Description: The Athens domain for the account
    Default: "Athenz"
  Environment:
    Type: String
    Description: The environment UI is running in
    AllowedValues:
      - prod
      - stage
      - dev
  S3AccessLogBucketName:
      Type: String
      Description: S3 bucket name to store access logs
  Route53HostedZoneName:
    Type: String
    Description: The hosted zone name to place a CNAME entry for. Must end with a period. Empty string means do not create one.
  Route53RecordName:
    Type: String
    Description: The hosted records to be added
Conditions:
  CreateDNSRecordSet: !Not [!Equals [ !Ref Route53HostedZoneName, '']]


Resources:
  UIVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref 'UIVPCCidrBlock'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PrivateSubnet01:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref 'PrivateSubnet01CidrBlock'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}a-private
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PrivateSubnet02:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Ref 'PrivateSubnet02CidrBlock'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}b-private
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PublicSubnet01:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: !Ref 'PublicSubnet01CidrBlock'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}a-public
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PublicSubnet02:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: !Ref 'PublicSubnet02CidrBlock'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}b-public
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  Nacl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  NetworkAclEntry01:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '100'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: !Ref 'UIVPCCidrBlock'
      PortRange:
        From: '22'
        To: '22'
  NetworkAclEntry02:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '110'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '2222'
        To: '2222'
  NetworkAclEntry03:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '120'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '80'
        To: '80'
  NetworkAclEntry04:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '130'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '443'
        To: '443'
  NetworkAclEntry05:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '140'
      Protocol: "17"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '123'
        To: '123'
  NetworkAclEntry06:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      Egress: 'true'
      RuleNumber: '200'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '1024'
        To: '65535'
  NetworkAclEntry07:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '100'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '22'
        To: '22'
  NetworkAclEntry08:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '110'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '2222'
        To: '2222'
  NetworkAclEntry09:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '120'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '80'
        To: '80'
  NetworkAclEntry10:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '130'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '443'
        To: '443'
  NetworkAclEntry11:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '140'
      Protocol: "17"
      RuleAction: allow
      CidrBlock: !Ref 'UIVPCCidrBlock'
      PortRange:
        From: '123'
        To: '123'
  NetworkAclEntry12:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref 'Nacl'
      RuleNumber: '200'
      Protocol: "6"
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '1024'
        To: '65535'
  PrivateSubnet01Nacl:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref 'PrivateSubnet01'
      NetworkAclId: !Ref 'Nacl'
  PrivateSubnet02Nacl:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref 'PrivateSubnet02'
      NetworkAclId: !Ref 'Nacl'
  PublicSubnet01Nacl:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref 'PublicSubnet01'
      NetworkAclId: !Ref 'Nacl'
  PublicSubnet02Nacl:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref 'PublicSubnet02'
      NetworkAclId: !Ref 'Nacl'
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'UIVPC'
  PublicSubnet01NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt PublicSubnet01EIP.AllocationId
      SubnetId: !Ref 'PublicSubnet01'
      Tags:
         - Key: Name
           Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}a
         - Key: Environment
           Value: !Ref Environment
         - Key: Stack
           Value: !Ref AWS::StackName
  PublicSubnet01EIP:
      DependsOn: VPCGatewayAttachment
      Type: AWS::EC2::EIP
      Properties:
        Domain: vpc
  PublicSubnet02NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt PublicSubnet02EIP.AllocationId
      SubnetId: !Ref 'PublicSubnet02'
      Tags:
         - Key: Name
           Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}b
         - Key: Environment
           Value: !Ref Environment
         - Key: Stack
           Value: !Ref AWS::StackName
  PublicSubnet02EIP:
      DependsOn: VPCGatewayAttachment
      Type: AWS::EC2::EIP
      Properties:
        Domain: vpc
  PublicSubnetRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}-public
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  GatewayRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
      RouteTableId: !Ref 'PublicSubnetRouteTable'
    DependsOn: VPCGatewayAttachment
  PrivateSubnet01RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}a-private
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PrivateSubnet01Route:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'PublicSubnet01NatGateway'
      RouteTableId: !Ref 'PrivateSubnet01RouteTable'
  PrivateSubnet02RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-${UIServiceName}-${AWS::Region}b-private
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  PrivateSubnet02Route:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'PublicSubnet02NatGateway'
      RouteTableId: !Ref 'PrivateSubnet02RouteTable'
    DependsOn: VPCGatewayAttachment
  PublicSubnet01RouteTableAssociaton:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref 'PublicSubnetRouteTable'
      SubnetId: !Ref 'PublicSubnet01'
  PublicSubnet02RouteTableAssociaton:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref 'PublicSubnetRouteTable'
      SubnetId: !Ref 'PublicSubnet02'
  PrivateSubnet01RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref 'PrivateSubnet01RouteTable'
      SubnetId: !Ref 'PrivateSubnet01'
  PrivateSubnet02RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref 'PrivateSubnet02RouteTable'
      SubnetId: !Ref 'PrivateSubnet02'
  UIELBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Sub ${GroupName}-${Environment}-elb-sg-${UIServiceName}-${AWS::Region}
      GroupDescription: 'UI public elb security group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-elb-${UIServiceName}-${AWS::Region}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  UIServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Sub ${GroupName}-${Environment}-server-sg-${UIServiceName}-${AWS::Region}
      GroupDescription: 'UI public server security group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          CidrIp: !Ref 'UIVPCCidrBlock'
      VpcId: !Ref 'UIVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-server-${UIServiceName}-${AWS::Region}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  UILoadBalancer:
    Type: "AWS::ElasticLoadBalancing::LoadBalancer"
    Properties:
      HealthCheck:
        HealthyThreshold: 2
        Interval: 5
        Target: TCP:443
        Timeout: 2
        UnhealthyThreshold: 4
      Listeners:
        - InstancePort: 443
          InstanceProtocol: TCP
          LoadBalancerPort: 443
          Protocol: TCP
      LoadBalancerName: !Sub ${Environment}-elb-${UIServiceName}-${AWS::Region}
      Scheme: 'internet-facing'
      ConnectionDrainingPolicy:
        Enabled: 'true'
        Timeout: '60'
      CrossZone: true
      SecurityGroups:
        - !Ref UIELBSecurityGroup
      Subnets:
        - !Ref 'PublicSubnet01'
        - !Ref 'PublicSubnet02'
      AccessLoggingPolicy:
        S3BucketName: !Ref S3AccessLogBucketName
        S3BucketPrefix: !Sub elb-${UIServiceName}
        Enabled: 'true'
        EmitInterval: '5'
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-elb-UI-${AWS::Region}
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack
          Value: !Ref AWS::StackName
  UIRecordSet:
    Type: AWS::Route53::RecordSet
    Condition: CreateDNSRecordSet
    Properties:
      Comment: CNAME record for the UI Server.
      HostedZoneName: !Ref Route53HostedZoneName
      Name: !Ref Route53RecordName
      TTL: 60
      Type: CNAME
      ResourceRecords:
        - !GetAtt UILoadBalancer.DNSName
Outputs:
  UIVPCID:
    Description: The ID of the UI VPC
    Value: !Ref UIVPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
  PrivateSubnet01ID:
    Description: TThe ID of Private Subnet Availability Zone 1 in UI VPC
    Value: !Ref PrivateSubnet01
    Export:
      Name:  !Sub "${AWS::StackName}-PrivateSubnet01ID"
  PrivateSubnet02ID:
    Description: The ID of Private Subnet Availability Zone 2 in UI VPC
    Value: !Ref PrivateSubnet02
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet02ID"
  LoadBalancerName :
    Description: The name of UI Load Balancer
    Value: !Ref UILoadBalancer
    Export:
      Name: !Sub "${AWS::StackName}-LoadBalancerName"
  ServerSecurityGroupID:
    Description: TThe ID of UI Server security group
    Value: !Ref UIServerSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-ServerSecurityGroupID"
